hexagonal-app-load-testing -> added quarkus example.